# SoundScribe

./: README.md  package-lock.json  package.json  pyproject.toml
src/: deploy-commands.js  index.js
src/commands/: disable-recording.js  enable-recording.js  join.js  opt-in.js  opt-out.js  record.js  start-recording.js  stop-recording.js
src/events/: interactionCreate.js  ready.js
src/utils/: createTranscription.js  joinChannel.js  saveAudioStreamToFile.js  transcribe.py
