[tool.poetry]
name = "soundscribe"
version = "0.1.0"
description = "Packages required for the spawned Python transcription process"
authors = ["Derek Tran <tran.derek.d.@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20231117"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
